[gd_scene load_steps=5 format=3 uid="uid://vue0adlmb71j"]

[ext_resource type="Script" path="res://scripts/moving_platform.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://vjoebiry2w67" path="res://assets/textures/platforms.png" id="2_6m5ma"]

[sub_resource type="Curve" id="Curve_oj7lf"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxxxx"]
size = Vector2(34, 10)

[node name="MovingPlatform" type="Node2D"]
script = ExtResource("1_script")
duration = 15.0
easing_curve = SubResource("Curve_oj7lf")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("RectangleShape2D_xxxxx")

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
texture = ExtResource("2_6m5ma")
region_enabled = true
region_rect = Rect2(16, 0, 32, 9)

[node name="PathLine" type="Line2D" parent="."]
z_index = -1
points = PackedVector2Array(0, 0, 6.71, 0, 12.88, 0, 18.57, 0, 23.84, 0, 28.75, 0, 33.36, 0, 37.73, 0, 41.92, 0, 45.99, 0, 50, 0, 54.01, 0, 58.08, 0, 62.27, 0, 66.64, 0, 71.25, 0, 76.16, 0, 81.43, 0, 87.12, 0, 93.29, 0, 100, 0)
width = 2.0
default_color = Color(1, 1, 1, 0.3)

[node name="Positions" type="Node2D" parent="."]

[node name="StartPosition" type="Marker2D" parent="Positions"]

[node name="EndPosition" type="Marker2D" parent="Positions"]
position = Vector2(100, 0)
